# BuildRegex

./: README.md  pyproject.toml
build_regex/: __init__.py  regex.py  util.py
playground/: package.json  test.py  test.ts
